adding about me

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,21 +9,26 @@
     <link rel="stylesheet" href="./static/style.css">
 
     <!-- FONT AWESOME -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Links Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">                
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
     <title>Portfolio Luisa Mejia - UX/UI Designer</title>
 </head>
+
 <body>
     <section class="navbar">
         <div class="icon">
 
         </div>
-        <div class="menu"> 
+        <div class="menu">
             <nav>
                 <ul>
                     <li><a href="">Home</a></li>
@@ -58,8 +64,8 @@
                         <div class="project-info info-left">
                             <h3>Tiramisu Project</h3>
                             <p>Final Project Web Development 1 <br>
-                                I redesigned an existing templlate for a unique tiramisú bubsines. 
-                                Every element was carefully selected to reflect the business essence and branding</p> 
+                                I redesigned an existing templlate for a unique tiramisú bubsines.
+                                Every element was carefully selected to reflect the business essence and branding</p>
                             <div class="used-tools tools-left">
                                 <ul>
                                     <li><i class="fa-brands fa-html5"></i></li>
@@ -68,14 +74,16 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="project-image image-1"><a href="https://luisame00.github.io/TiramisuShop/"></a></div>    
+                        <div class="project-image image-1"><a href="https://luisame00.github.io/TiramisuShop/"></a>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="project-card">
                         <div class="project-info info-left">
                             <h3>Popsicle Project</h3>
-                            <p>Using Wordpress I designed an ice-cream shop that resembled those from 60/70s. The idea for this design was to  invoke a sense of nostalgia and fun.
+                            <p>Using Wordpress I designed an ice-cream shop that resembled those from 60/70s. The idea
+                                for this design was to invoke a sense of nostalgia and fun.
                             </p>
                             <div class="used-tools tools-left">
                                 <ul>
@@ -85,7 +93,8 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="project-image image-2"><a href="https://github.com/luisame00/Wordpress-Popsicle-Project"></a></div>
+                        <div class="project-image image-2"><a
+                                href="https://github.com/luisame00/Wordpress-Popsicle-Project"></a></div>
                     </div>
                 </div>
                 <div class="row">
@@ -93,28 +102,37 @@
                         <div class="project-info info-left">
                             <h3>Desing WIOBL</h3>
                             <p>Final Project Web Development 2
-                                I designed all 9 pages for this outdoor basketball league. From the front page to the registration page, each page was designed with fun elementes closely tight to the game of basketball as well as the mission of inviting the community to join the league.
-                                </p>
+                                I designed all 9 pages for this outdoor basketball league. From the front page to the
+                                registration page, each page was designed with fun elementes closely tight to the game
+                                of basketball as well as the mission of inviting the community to join the league.
+                            </p>
                             <div class="used-tools tools-left">
                                 <ul>
-                                    <li><a href="https://github.com/582-41W-VA/lia-luvanier00"><i class="fa-brands fa-github"></i></a></li>
-                                    <li><a href="https://www.figma.com/design/vZ4PXB0OSqrWF9lnBxxsFt/West-Island-Outdoor-Basketball-League---LM-Design?node-id=68-284&t=vj26KLhPd7a9cCh3-1 "><i class="fa-brands fa-figma"></i></a></li>
+                                    <li><a href="https://github.com/582-41W-VA/lia-luvanier00"><i
+                                                class="fa-brands fa-github"></i></a></li>
+                                    <li><a
+                                            href="https://www.figma.com/design/vZ4PXB0OSqrWF9lnBxxsFt/West-Island-Outdoor-Basketball-League---LM-Design?node-id=68-284&t=vj26KLhPd7a9cCh3-1 "><i
+                                                class="fa-brands fa-figma"></i></a></li>
                                     <li><i class="fa-solid fa-image"></i></li>
                                     <li><i class="fa-brands fa-python"></i></li>
                                 </ul>
                             </div>
                         </div>
-                        <div class="project-image image-3"><a href="https://www.figma.com/design/vZ4PXB0OSqrWF9lnBxxsFt/West-Island-Outdoor-Basketball-League---LM-Design?node-id=68-284&t=vj26KLhPd7a9cCh3-1 "></a></div>
+                        <div class="project-image image-3"><a
+                                href="https://www.figma.com/design/vZ4PXB0OSqrWF9lnBxxsFt/West-Island-Outdoor-Basketball-League---LM-Design?node-id=68-284&t=vj26KLhPd7a9cCh3-1 "></a>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="column">
                 <div class="row">
                     <div class="project-card">
-                        <div class="project-image image-4"><a href="https://github.com/luisame00/wordle-project"></a></div>
+                        <div class="project-image image-4"><a href="https://github.com/luisame00/wordle-project"></a>
+                        </div>
                         <div class="project-info info-right">
                             <h3>Wordle Flask</h3>
-                            <p>In this Project I gave live to welll-known game, Wordle. Each player had an individual sesión, but with the option of maintaining the game progress.                             </p>
+                            <p>In this Project I gave live to welll-known game, Wordle. Each player had an individual
+                                sesión, but with the option of maintaining the game progress. </p>
                             <div class="used-tools">
                                 <ul>
                                     <li><i class="fa-brands fa-figma"></i></li>
@@ -127,10 +145,13 @@
                 </div>
                 <div class="row">
                     <div class="project-card">
-                        <div class="project-image image-5"><a href="https://luisame00.github.io/E-Commerce-with-React/"></a></div>
+                        <div class="project-image image-5"><a
+                                href="https://luisame00.github.io/E-Commerce-with-React/"></a></div>
                         <div class="project-info info-right">
                             <h3>React Eccomerce</h3>
-                            <p>I designed this website thinking of trendy fashion we may find in popular sites like Pinterest, but dedicated to a business that sells only neutral color clothes: White, black and beige. Still making it fun and youthful.</p>
+                            <p>I designed this website thinking of trendy fashion we may find in popular sites like
+                                Pinterest, but dedicated to a business that sells only neutral color clothes: White,
+                                black and beige. Still making it fun and youthful.</p>
                             <div class="used-tools">
                                 <ul>
                                     <li><i class="fa-brands fa-figma"></i></li>
@@ -143,10 +164,14 @@
                 </div>
                 <div class="row">
                     <div class="project-card">
-                        <div class="project-image image-6"><a href="https://www.figma.com/slides/GT0fabPYFCbWq6utAfnMuo/Sami-Fruit---LM-Design?node-id=148-26&t=OBWEAlSoxwq9K2XC-1 "></a></div>
+                        <div class="project-image image-6"><a
+                                href="https://www.figma.com/slides/GT0fabPYFCbWq6utAfnMuo/Sami-Fruit---LM-Design?node-id=148-26&t=OBWEAlSoxwq9K2XC-1 "></a>
+                        </div>
                         <div class="project-info info-right">
-                            <h3>Desing Fancy Fruit</h3>
-                            <p>In this Project I re-imagined a popular fruit and vegetable local shop. Adding different design elements that complete the business as well as new functioanalities such a récipe blog and récipe page</p>
+                            <h3>Desing Sami Fruit</h3>
+                            <p>In this Project I re-imagined a popular fruit and vegetable local shop. Adding different
+                                design elements that complete the business as well as new functioanalities such a
+                                récipe blog and récipe page</p>
                             <div class="used-tools">
                                 <ul>
                                     <li><i class="fa-brands fa-figma"></i></li>
@@ -161,5 +186,37 @@
             </div>
         </div>
     </section>
+    <article class="about-us" id="about-us">
+        <div class="img-background-1"></div>
+        <div class="img-background-2"></div>
+        <div class="img-background-3"></div>
+        <div class="left">
+            <h2>About Me</h2>
+            <div class="line-about">
+            </div>
+            <p>I feel most confident designing websites and building prototypes (wireframes and high-fidelity Mock-Ups)
+                centered in
+                enhanced user experience, functionality, and visual appeal. I have also had exposure to a variety of
+                tools and
+                programming languages: HTML, CSS, JavaScript,Wordpress, Bootstrap, React, GitHub, PHP, Phython, JQuery
+                among others.</p>
+            <div class="links-about">
+                <div class="icon-link-1">
+                    <img class="icon-coffee" src="https://img.icons8.com/color/48/figma--v1.png" alt="coffee-beans-" />
+                    <h5 class="text-icon">Figma</h5>
+                </div>
+                <div class="icon-link-2">
+                    <img class="icon-chocolate" src="https://img.icons8.com/color/48/adobe-photoshop--v1.png"
+                        alt="chocolate-bar" />
+                    <h5 class="text-icon">Photoshop</h5>
+                </div>
+            </div>
+        </div>
+        <div class="right">
+            <div class="image-7"></div>
+            <div class="image-8"></div>
+        </div>
+    </article>
 </body>
+
 </html>
