--- a/index.html
+++ b/index.html
@@ -187,9 +187,6 @@
         </div>
     </section>
     <article class="about-us" id="about-us">
-        <div class="img-background-1"></div>
-        <div class="img-background-2"></div>
-        <div class="img-background-3"></div>
         <div class="left">
             <h2>About Me</h2>
             <div class="line-about">
@@ -210,6 +207,15 @@
                         alt="chocolate-bar" />
                     <h5 class="text-icon">Photoshop</h5>
                 </div>
+                <div class="icon-link-1">
+                    <img class="icon-coffee" src="https://img.icons8.com/nolan/64/github.png" alt="coffee-beans-" />
+                    <h5 class="text-icon">GitHub</h5>
+                </div>
+                <div class="icon-link-2">
+                    <img class="icon-chocolate" src="https://img.icons8.com/fluency/48/wordpress.png"
+                        alt="chocolate-bar" />
+                    <h5 class="text-icon">WordPress</h5>
+                </div>
             </div>
         </div>
         <div class="right">
@@ -217,6 +223,47 @@
             <div class="image-8"></div>
         </div>
     </article>
+    <section class="gallery" id="gallery">
+        <h2>Photo Gallery</h2>
+        <div class="gallery-up">
+            <div class="img-gallery-1"></div>
+            <div class="img-gallery-2"></div>
+            <div class="img-gallery-3"></div>
+        </div>
+        <div class="gallery-down">
+            <div class="img-gallery-4"></div>
+            <div class="img-gallery-5"></div>
+            <div class="img-gallery-6"></div>
+        </div>
+    </section>
+    <footer>
+        <div class="content-footer">
+            <div class="column-footer info-footer">
+                <div class="logo-footer">
+                    <a href="">
+                        <div class="my-logo-footer"></div>
+                    </a>
+                </div>
+                <p>Laval, Quebec, CA</p>
+                <p>lfmv21@gmail.com</p>
+                <p><a href="https://luisame00.github.io/">https://luisame00.github.io/</a></p>
+                <div class="social-icons">
+                    <ul>
+                        <li><a href="https://github.com/luisame00""><i class=" fa-brands fa-github"></i></a></li>
+                        <li><a href="https://wa.me/14076920569"><i class="fa-brands fa-whatsapp"></i></a></li>
+                        <li><a href="https://drive.google.com/file/d/1u-Vlrqxie1K711hANB_BZgyZrkoi8rov/view"><i
+                                    class="fa-solid fa-file-lines"></i>CV</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-phase">
+                <h4 class="footer-text">Copyright &COPY;2025 All rights reserved
+                </h4>
+                <h4 class="footer-text">This template is made with ♡ by Luisa Mejia</h4>
+            </div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
