--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <title>Portfolio Luisa Mejia - UX/UI Designer</title>
@@ -28,28 +28,28 @@
 
 <body>
     <section class="navbar">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
-                        <div class="icon">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <div class="icon">
 
-                        </div>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ms-auto gap-3 pe-4">
-                            <li class="nav-item"><a class="nav-link" href="">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#about-us" >About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#footer">Contact</a></li>
-                        </ul>
                     </div>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto gap-3 pe-4">
+                        <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about-us">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#footer">Contact</a></li>
+                    </ul>
                 </div>
-            </nav>
+            </div>
+        </nav>
 
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </section>
     <header>
         <div class="header-container">
@@ -57,7 +57,9 @@
             <div class="main-info">
                 <ul>
                     <li><a href="https://github.com/luisame00"><i class="fa-brands fa-square-github"></i></a></li>
-                    <li><a href="https://drive.google.com/file/d/1u-Vlrqxie1K711hANB_BZgyZrkoi8rov/view">CV</a></li>
+                    <li><a
+                            href="https://drive.google.com/file/d/1I9A_P6MH0Xf-4MDizDFXWcVu8q91wl2B/view?usp=drive_link">CV</a>
+                    </li>
                 </ul>
                 <h1>Luisa Mejia</h1>
                 <h3>UX/UI Designer</h3>
@@ -201,7 +203,10 @@
             <h2>About Me</h2>
             <div class="line-about">
             </div>
-            <p>I feel most confident designing websites and building prototypes (wireframes and high-fidelity Mock-Ups) centered in enhanced user experience, functionality, and visual appeal. I have also had exposure to a variety of tools and programming languages: HTML, CSS, JavaScript,Wordpress, Bootstrap, React, GitHub, PHP, Python, JQuery among others.</p>
+            <p>I feel most confident designing websites and building prototypes (wireframes and high-fidelity Mock-Ups)
+                centered in enhanced user experience, functionality, and visual appeal. I have also had exposure to a
+                variety of tools and programming languages: HTML, CSS, JavaScript,Wordpress, Bootstrap, React, GitHub,
+                PHP, Python, JQuery among others.</p>
             <div class="links-about">
                 <div class="icon-link-1">
                     <img class="icon-coffee" src="https://img.icons8.com/color/48/figma--v1.png" alt="coffee-beans-" />
@@ -256,7 +261,8 @@
                     <ul>
                         <li><a href="https://github.com/luisame00""><i class=" fa-brands fa-github"></i></a></li>
                         <li><a href="https://wa.me/14076920569"><i class="fa-brands fa-whatsapp"></i></a></li>
-                        <li><a href="https://drive.google.com/file/d/1u-Vlrqxie1K711hANB_BZgyZrkoi8rov/view"><i
+                        <li><a
+                                href="https://drive.google.com/file/d/1I9A_P6MH0Xf-4MDizDFXWcVu8q91wl2B/view?usp=drive_link"><i
                                     class="fa-solid fa-file-lines"></i>CV</a></li>
                     </ul>
                 </div>
