--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <title>Portfolio Luisa Mejia - UX/UI Designer</title>
@@ -28,28 +28,28 @@
 
 <body>
     <section class="navbar">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <div class="icon">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <div class="icon">
 
+                        </div>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto gap-3 pe-4">
+                            <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#about-us" >About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#footer">Contact</a></li>
+                        </ul>
                     </div>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto gap-3 pe-4">
-                        <li class="nav-item"><a class="nav-link" href="">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about-us">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#footer">Contact</a></li>
-                    </ul>
                 </div>
-            </div>
-        </nav>
+            </nav>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </section>
     <header>
         <div class="header-container">
@@ -57,9 +57,7 @@
             <div class="main-info">
                 <ul>
                     <li><a href="https://github.com/luisame00"><i class="fa-brands fa-square-github"></i></a></li>
-                    <li><a
-                            href="https://drive.google.com/file/d/1I9A_P6MH0Xf-4MDizDFXWcVu8q91wl2B/view?usp=drive_link">CV</a>
-                    </li>
+                    <li><a href="https://drive.google.com/file/d/1u-Vlrqxie1K711hANB_BZgyZrkoi8rov/view">CV</a></li>
                 </ul>
                 <h1>Luisa Mejia</h1>
                 <h3>UX/UI Designer</h3>
@@ -135,11 +133,33 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="project-card">
+                        <div class="project-info info-left">
+                            <h3>E-Campus</h3>
+                            <p>Designed, created branding, content and multimedia content for an upcoming online collaboration between all 4 anglophone colleges in Quebec
+                            </p>
+                            <div class="used-tools tools-left">
+                                <ul>
+                                    <li><a href="https://github.com/luisame00/ecampus"><i
+                                                class="fa-brands fa-github"></i></a></li>
+                                    <li><a href="https://www.figma.com/design/FjVTWEO4slUP53poZYzeCE/Vanier-ECampus-Site?node-id=0-1&t=23pSu807MoVAMgIj-1"><i
+                                                class="fa-brands fa-figma"></i></a></li>
+                                    <li><i class="fa-solid fa-image"></i></li>
+                                    <li><i class="fa-brands fa-wordpress"></i></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="project-image image-4"><a
+                                href="https://github.com/luisame00/ecampus"></a>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="column column-down">
                 <div class="row">
                     <div class="project-card">
-                        <div class="project-image image-4"><a href="https://github.com/luisame00/wordle-project"></a>
+                        <div class="project-image image-5"><a href="https://github.com/luisame00/wordle-project"></a>
                         </div>
                         <div class="project-info info-right">
                             <h3>Wordle Flask</h3>
@@ -157,7 +177,7 @@
                 </div>
                 <div class="row">
                     <div class="project-card">
-                        <div class="project-image image-5"><a
+                        <div class="project-image image-6"><a
                                 href="https://luisame00.github.io/E-Commerce-with-React/"></a></div>
                         <div class="project-info info-right">
                             <h3>React Eccomerce</h3>
@@ -176,7 +196,7 @@
                 </div>
                 <div class="row">
                     <div class="project-card">
-                        <div class="project-image image-6"><a
+                        <div class="project-image image-7"><a
                                 href="https://www.figma.com/slides/GT0fabPYFCbWq6utAfnMuo/Sami-Fruit---LM-Design?node-id=148-26&t=OBWEAlSoxwq9K2XC-1 "></a>
                         </div>
                         <div class="project-info info-right">
@@ -184,6 +204,25 @@
                             <p>In this Project I re-imagined a popular fruit and vegetable local shop. Adding different
                                 design elements that complete the business as well as new functioanalities such a
                                 récipe blog and récipe page</p>
+                            <div class="used-tools used-tools-down-rs">
+                                <ul>
+                                    <li><i class="fa-brands fa-figma"></i></li>
+                                    <li><i class="fa-solid fa-image"></i></li>
+                                    <li><i class="fa-brands fa-html5"></i></li>
+                                    <li><i class="fa-brands fa-css3-alt"></i></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="project-card">
+                        <div class="project-image image-8"><a
+                                href="https://www.figma.com/design/LWoPu6NDQxiShBgm9N34jA/ISWP---Monkeys-at-Work--1st-Draft-?node-id=0-1&t=pDyW9mGSqoDBqZEJ-1"></a>
+                        </div>
+                        <div class="project-info info-right">
+                            <h3>Philosophy Design</h3>
+                            <p>Re-designed website for an international philosophy association</p>
                             <div class="used-tools used-tools-down-rs">
                                 <ul>
                                     <li><i class="fa-brands fa-figma"></i></li>
@@ -203,10 +242,7 @@
             <h2>About Me</h2>
             <div class="line-about">
             </div>
-            <p>I feel most confident designing websites and building prototypes (wireframes and high-fidelity Mock-Ups)
-                centered in enhanced user experience, functionality, and visual appeal. I have also had exposure to a
-                variety of tools and programming languages: HTML, CSS, JavaScript,Wordpress, Bootstrap, React, GitHub,
-                PHP, Python, JQuery among others.</p>
+            <p>I feel most confident designing websites and building prototypes (wireframes and high-fidelity Mock-Ups) centered in enhanced user experience, functionality, and visual appeal. I have also had exposure to a variety of tools and programming languages: HTML, CSS, JavaScript,Wordpress, Bootstrap, React, GitHub, PHP, Python, JQuery among others.</p>
             <div class="links-about">
                 <div class="icon-link-1">
                     <img class="icon-coffee" src="https://img.icons8.com/color/48/figma--v1.png" alt="coffee-beans-" />
@@ -229,8 +265,8 @@
             </div>
         </div>
         <div class="right">
-            <div class="image-7"></div>
-            <div class="image-8"></div>
+            <div class="image-9"></div>
+            <div class="image-10"></div>
         </div>
     </article>
     <section class="gallery" id="gallery">
@@ -261,8 +297,7 @@
                     <ul>
                         <li><a href="https://github.com/luisame00""><i class=" fa-brands fa-github"></i></a></li>
                         <li><a href="https://wa.me/14076920569"><i class="fa-brands fa-whatsapp"></i></a></li>
-                        <li><a
-                                href="https://drive.google.com/file/d/1I9A_P6MH0Xf-4MDizDFXWcVu8q91wl2B/view?usp=drive_link"><i
+                        <li><a href="https://drive.google.com/file/d/1u-Vlrqxie1K711hANB_BZgyZrkoi8rov/view"><i
                                     class="fa-solid fa-file-lines"></i>CV</a></li>
                     </ul>
                 </div>
