--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <title>Portfolio Luisa Mejia - UX/UI Designer</title>
@@ -28,28 +28,28 @@
 
 <body>
     <section class="navbar">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
-                        <div class="icon">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <div class="icon">
 
-                        </div>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ms-auto gap-3 pe-4">
-                            <li class="nav-item"><a class="nav-link" href="">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#about-us" >About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#footer">Contact</a></li>
-                        </ul>
                     </div>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto gap-3 pe-4">
+                        <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about-us">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#footer">Contact</a></li>
+                    </ul>
                 </div>
-            </nav>
+            </div>
+        </nav>
 
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </section>
     <header>
         <div class="header-container">
@@ -57,7 +57,9 @@
             <div class="main-info">
                 <ul>
                     <li><a href="https://github.com/luisame00"><i class="fa-brands fa-square-github"></i></a></li>
-                    <li><a href="https://drive.google.com/file/d/1u-Vlrqxie1K711hANB_BZgyZrkoi8rov/view">CV</a></li>
+                    <li><a
+                            href="https://drive.google.com/file/d/1nAJ5jVmVDb4dSwrDYrrx4j8I3mFVNNpz/view?usp=sharing">CV</a>
+                    </li>
                 </ul>
                 <h1>Luisa Mejia</h1>
                 <h3>UX/UI Designer</h3>
@@ -74,7 +76,7 @@
                         <div class="project-info info-left">
                             <h3>Tiramisu Project</h3>
                             <p>Final Project Web Development 1 <br>
-                                I redesigned an existing templlate for a unique tiramisú bubsines.
+                                I redesigned an existing template for a unique tiramisú bubsines.
                                 Every element was carefully selected to reflect the business essence and branding</p>
                             <div class="used-tools tools-left">
                                 <ul>
@@ -92,7 +94,7 @@
                     <div class="project-card">
                         <div class="project-info info-left">
                             <h3>Popsicle Project</h3>
-                            <p>Using Wordpress I designed an ice-cream shop that resembled those from 60/70s. The idea
+                            <p>Using Wordpress I designed an ice-cream shop that resembled those from 60s/70s. The idea
                                 for this design was to invoke a sense of nostalgia and fun.
                             </p>
                             <div class="used-tools tools-left">
@@ -137,21 +139,22 @@
                     <div class="project-card">
                         <div class="project-info info-left">
                             <h3>E-Campus</h3>
-                            <p>Designed, created branding, content and multimedia content for an upcoming online collaboration between all 4 anglophone colleges in Quebec
+                            <p>Designed, created branding, content and multimedia content for an upcoming online
+                                collaboration between all 4 anglophone colleges in Quebec
                             </p>
                             <div class="used-tools tools-left">
                                 <ul>
                                     <li><a href="https://github.com/luisame00/ecampus"><i
                                                 class="fa-brands fa-github"></i></a></li>
-                                    <li><a href="https://www.figma.com/design/FjVTWEO4slUP53poZYzeCE/Vanier-ECampus-Site?node-id=0-1&t=23pSu807MoVAMgIj-1"><i
+                                    <li><a
+                                            href="https://www.figma.com/design/FjVTWEO4slUP53poZYzeCE/Vanier-ECampus-Site?node-id=0-1&t=23pSu807MoVAMgIj-1"><i
                                                 class="fa-brands fa-figma"></i></a></li>
                                     <li><i class="fa-solid fa-image"></i></li>
                                     <li><i class="fa-brands fa-wordpress"></i></li>
                                 </ul>
                             </div>
                         </div>
-                        <div class="project-image image-4"><a
-                                href="https://github.com/luisame00/ecampus"></a>
+                        <div class="project-image image-4"><a href="https://github.com/luisame00/ecampus"></a>
                         </div>
                     </div>
                 </div>
@@ -180,7 +183,7 @@
                         <div class="project-image image-6"><a
                                 href="https://luisame00.github.io/E-Commerce-with-React/"></a></div>
                         <div class="project-info info-right">
-                            <h3>React Eccomerce</h3>
+                            <h3>React E-Comerce</h3>
                             <p>I designed this website thinking of trendy fashion we may find in popular sites like
                                 Pinterest, but dedicated to a business that sells only neutral color clothes: White,
                                 black and beige. Still making it fun and youthful.</p>
@@ -242,7 +245,11 @@
             <h2>About Me</h2>
             <div class="line-about">
             </div>
-            <p>I feel most confident designing websites and building prototypes (wireframes and high-fidelity Mock-Ups) centered in enhanced user experience, functionality, and visual appeal. I have also had exposure to a variety of tools and programming languages: HTML, CSS, JavaScript,Wordpress, Bootstrap, React, GitHub, PHP, Python, JQuery among others.</p>
+            <p>I feel most confident designing websites and building prototypes (wireframes and high-fidelity Mock-Ups)
+                centered in enhanced user experience, functionality, and visual appeal. I have also had exposure to a
+                variety of tools and developing and programming languages: HTML, CSS, JavaScript,Wordpress, Bootstrap,
+                React, GitHub,
+                PHP, Python, JQuery among others.</p>
             <div class="links-about">
                 <div class="icon-link-1">
                     <img class="icon-coffee" src="https://img.icons8.com/color/48/figma--v1.png" alt="coffee-beans-" />
@@ -291,7 +298,7 @@
                     </a>
                 </div>
                 <p>Laval, Quebec, CA</p>
-                <p>lfmv21@gmail.com</p>
+                <p>luisamejia00@gmail.com</p>
                 <p><a href="https://luisame00.github.io/">https://luisame00.github.io/</a></p>
                 <div class="social-icons">
                     <ul>
