Your commit message here

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         <div class="project-image image-6"><a
                                 href="https://luisame00.github.io/E-Commerce-with-React/"></a></div>
                         <div class="project-info info-right">
-                            <h3>React E-Comerce</h3>
+                            <h3>React E-Commerce</h3>
                             <p>I designed this website thinking of trendy fashion we may find in popular sites like
                                 Pinterest, but dedicated to a business that sells only neutral color clothes: White,
                                 black and beige. Still making it fun and youthful.</p>
