--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <title>Portfolio Luisa Mejia - UX/UI Designer</title>
+    <title>Portfolio Luisa Mejia - Web Designer and Developer </title>
 
 </head>
 
@@ -57,26 +57,23 @@
             <div class="main-info">
                 <ul>
                     <li><a href="https://github.com/luisame00"><i class="fa-brands fa-square-github"></i></a></li>
-                    <li><a
-                            href="https://drive.google.com/file/d/1nAJ5jVmVDb4dSwrDYrrx4j8I3mFVNNpz/view?usp=sharing">CV</a>
-                    </li>
                 </ul>
                 <h1>Luisa Mejia</h1>
-                <h3>UX/UI Designer</h3>
+                <h3>Web Designer and Developer</h3>
             </div>
         </div>
     </header>
 
     <section class="projects" id="projects">
-        <h2>My Projects</h2>
+        <h2>Projects</h2>
         <div class="container">
             <div class="column">
                 <div class="row">
                     <div class="project-card">
                         <div class="project-info info-left">
-                            <h3>Tiramisu Project</h3>
+                            <h3>Restaurant Project</h3>
                             <p>Final Project Web Development 1 <br>
-                                I redesigned an existing template for a unique tiramisú bubsines.
+                                Redesigned an existing template for a unique food bubsines.
                                 Every element was carefully selected to reflect the business essence and branding</p>
                             <div class="used-tools tools-left">
                                 <ul>
@@ -93,8 +90,8 @@
                 <div class="row">
                     <div class="project-card">
                         <div class="project-info info-left">
-                            <h3>Popsicle Project</h3>
-                            <p>Using Wordpress I designed an ice-cream shop that resembled those from 60s/70s. The idea
+                            <h3>Ice Cream Project</h3>
+                            <p>Used Wordpress to designed an ice-cream shop that resembled those from 60s/70s. The idea
                                 for this design was to invoke a sense of nostalgia and fun.
                             </p>
                             <div class="used-tools tools-left">
@@ -112,10 +109,10 @@
                 <div class="row">
                     <div class="project-card">
                         <div class="project-info info-left">
-                            <h3>Desing WIOBL</h3>
+                            <h3>Design WIOBL</h3>
                             <p>Final Project Web Development 2
-                                I designed all 9 pages for this outdoor basketball league. From the front page to the
-                                registration page, each page was designed with fun elementes closely tight to the game
+                                Designed 9 pages for this outdoor basketball league in Montreal. Each page was designed
+                                with fun elementes closely tight to the game
                                 of basketball as well as the mission of inviting the community to join the league.
                             </p>
                             <div class="used-tools tools-left">
@@ -166,7 +163,7 @@
                         </div>
                         <div class="project-info info-right">
                             <h3>Wordle Flask</h3>
-                            <p>In this Project I gave live to welll-known game, Wordle. Each player had an individual
+                            <p>Re-created a welll-known game, Wordle. Each player had an individual
                                 sesión, but with the option of maintaining the game progress. </p>
                             <div class="used-tools used-tools-down-rs">
                                 <ul>
@@ -183,10 +180,10 @@
                         <div class="project-image image-6"><a
                                 href="https://luisame00.github.io/E-Commerce-with-React/"></a></div>
                         <div class="project-info info-right">
-                            <h3>React E-Commerce</h3>
-                            <p>I designed this website thinking of trendy fashion we may find in popular sites like
-                                Pinterest, but dedicated to a business that sells only neutral color clothes: White,
-                                black and beige. Still making it fun and youthful.</p>
+                            <h3>E-Commerce</h3>
+                            <p>Designed this website thinking of trendy fashion found in popular sites like
+                                Pinterest, but dedicated to a business that sells neutral color clothes: White,
+                                black and beige. Making the site fun and youthful.</p>
                             <div class="used-tools used-tools-down-rs">
                                 <ul>
                                     <li><i class="fa-brands fa-figma"></i></li>
@@ -203,8 +200,8 @@
                                 href="https://www.figma.com/slides/GT0fabPYFCbWq6utAfnMuo/Sami-Fruit---LM-Design?node-id=148-26&t=OBWEAlSoxwq9K2XC-1 "></a>
                         </div>
                         <div class="project-info info-right">
-                            <h3>Desing Sami Fruit</h3>
-                            <p>In this Project I re-imagined a popular fruit and vegetable local shop. Adding different
+                            <h3>Design Sami Fruit</h3>
+                            <p>A well-known local website re-imagined. Added different
                                 design elements that complete the business as well as new functioanalities such a
                                 récipe blog and récipe page</p>
                             <div class="used-tools used-tools-down-rs">
@@ -245,11 +242,11 @@
             <h2>About Me</h2>
             <div class="line-about">
             </div>
-            <p>I feel most confident designing websites and building prototypes (wireframes and high-fidelity Mock-Ups)
-                centered in enhanced user experience, functionality, and visual appeal. I have also had exposure to a
-                variety of tools and developing and programming languages: HTML, CSS, JavaScript,Wordpress, Bootstrap,
-                React, GitHub,
-                PHP, Python, JQuery among others.</p>
+            <p>I feel confident designing websites, building prototypes (wireframes and high-fidelity Mock-Ups) and
+                using developing languages all centered in enhanced the user experience, functionality, and visual
+                appeal. Advanced user
+                of a variety of tools and developing programming languages: HTML, CSS, JavaScript,Wordpress, Bootstrap,
+                React, GitHub, PHP, Python, JQuery among others.</p>
             <div class="links-about">
                 <div class="icon-link-1">
                     <img class="icon-coffee" src="https://img.icons8.com/color/48/figma--v1.png" alt="coffee-beans-" />
@@ -303,9 +300,6 @@
                 <div class="social-icons">
                     <ul>
                         <li><a href="https://github.com/luisame00""><i class=" fa-brands fa-github"></i></a></li>
-                        <li><a href="https://wa.me/14076920569"><i class="fa-brands fa-whatsapp"></i></a></li>
-                        <li><a href="https://drive.google.com/file/d/1u-Vlrqxie1K711hANB_BZgyZrkoi8rov/view"><i
-                                    class="fa-solid fa-file-lines"></i>CV</a></li>
                     </ul>
                 </div>
             </div>
